# Alfred.ai

./: .gitignore  LICENSE  README.md  alfred.py  config.yml  notes.txt  pyproject.toml
alfred_ai_backend/: config.py  start.py
alfred_ai_backend/core/: AgentManager.py  CodeDatabase.py  agent.py  config.py
alfred_ai_backend/core/agents/: CoderAgent.py
alfred_ai_backend/core/tools/: CoderTool.py  DebugTool.py  RefreshCodeDbTool.py  TesterTool.py  ToolConfig.py  code_retriever_tool.py
alfred_ai_backend/core/utils/: AgentLogger.py  StatusMessaging.py  ToolConfig.py  code_reviewer_tool.py  code_tester_tool.py  code_writer_tool.py  redirect_stream.py
alfred_ai_backend/models/: Model.py  llm.py
alfred_ai_backend/models/anthropic/claude/: Claude.py  ClaudeAgentOutputParser.py  tool_constructor.py  utils.py
alfred_ai_backend/models/anthropic/claude/config/: agent_manager_config.yml  coder_tool_config.yml  debug_tool_config.yml  tester_tool_config.yml
alfred_ai_backend/models/llama_cpp_local/: codellama_instruct.py  codellama_instruct.yml  mistral_instruct.py  mistral_instruct.yml  utils.py
alfred_ai_backend/models/llama_cpp_local/mistral_instruct/: MistralInstruct.py
alfred_ai_backend/models/llama_cpp_local/mistral_instruct/config/: coder_tool_config.yml
alfred_ai_backend/models/openai_api/: chat_gpt.py  chat_gpt.yml
alfred_ai_backend/models/openai_api/chat_gpt/: ChatGpt.py
helloworld/: hello.py  test_helloworld.py
llama_cpp_local/: mistral_instruct.py  prompts.py
openai_api/: chat.py
(+4 files in other folders)
